...
  settingsOutline: 'settings-outline',

  favorite: 'star',
  favoriteOutline: 'star-outline',

  add: 'add',
  close: 'close',
  check: 'checkmark',
  chevron: 'chevron-forward',
  trash: 'trash-outline',
  refresh: 'refresh',
  search: 'search',
  external: 'open-outline',
...
