/** Maps the friendly English market name to its Chinese name. */
export const zhNames = {
    'Chinatown Complex Market': '牛车水大厦巴刹',
    'Tekka Centre/Zhu Jiao Market': '竹脚中心',
    'Tiong Bahru Market': '中峇鲁巴刹',
    'Geylang Serai Market': '芽笼士乃巴刹',
    'Maxwell Food Centre': '麦士威熟食中心',
    'Kim Hua Market': '金华巴刹',
    'Adam Road Food Centre': '亚当路熟食中心',
    'Newton Food Centre': '纽顿熟食中心',
    '51 Old Airport Road Food Centre and Shopping Mall': '旧机场路熟食中心',
...
